[package]
name = "test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.0"
axum = "0.6.10"
markdown = "1.0.0-alpha.7"
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
